--- a/portal/html/USR-4010-H-CONTN.html
+++ b/portal/html/USR-4010-H-CONTN.html
@@ -128,9 +128,15 @@
                 </ul>
             </nav>
             <div class="util_box">
+                <ul class="btn_login_box">
+                    <li><a href="./USR-2020-F-FORM.html">로그인</a></li>
+                    <li><a href="./USR-2010-F-FORM.html">회원가입</a></li>
+                </ul>
                 <div class="search_box">
-                    <input type="text" id="search_inp">
-                    <label for="search_inp" class="hidden">검색어 입력</label>
+                    <div class="search_inp">
+                        <input type="text" id="search_inp">
+                        <label for="search_inp" class="hidden">검색어 입력</label>
+                    </div>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -144,17 +150,6 @@
                     <span></span>
                 </a>
             </div>
-        </div>
-        <div class="header_bottom">
-            <div class="btn_bottom">
-                <a href="" class="purple">한국벤처캐피탈협회</a>
-                <a href="" class="blue">벤처투자 업무지원</a>
-            </div>
-            <ul>
-                <li><a href="./USR-2020-F-FORM.html">로그인</a></li>
-                <li><a href="./USR-2010-F-FORM.html">회원가입</a></li>
-                <li><a href="./USR-2210-F-LIST.html">사이트맵</a></li>
-            </ul>
         </div>
         <div class="allmenu_box">
             <div class="allmenu_box_header">
@@ -314,17 +309,220 @@
     
                 <div class="txt_content_box">
 
-                    <span class="txt_right">2022.05.16. ~ 현재</span>
+                    <!-- <span class="txt_right">2022.05.16. ~ 현재</span> -->
 
                     <p>
-                        중소벤처기업부가 취급하는 모든 개인정보는 관련 법령에 근거하여 수집 · 보유 및 처리되고 있습니다.<br/><br/>
-                        「개인정보보호법」은 이러한 개인정보의 취급에 대한 일반적 규범을 제시하고 있으며, 중소벤처기업부는 이러한 법령의 규정에 따라 수집 · 보유 및 처리하는 
-                        개인정보를 공공업무의 적절한 수행과 이용자의 권익을 보호하기 위해 적법하고 적정하게 취급할 것입니다.<br/><br/>
-                        또한, 중소벤처기업부는 관련 법령에서 규정한 바에 따라 보유하고 있는 개인정보에 대한 열람, 정정·삭제, 처리정지 요구 등 이용자의 권익을 존중하며, 
-                        이용자는 이러한 법령상 권익의 침해 등에 대하여 행정심판법에서 정하는 바에 따라 행정심판을 청구할 수 있습니다.<br/><br/>
-                        중소벤처기업부는 개인정보보호법 제 30조에 따라 정보주체의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 
-                        있도록 다음과 같은 개인정보 처리방침을 수립 · 공개하고 있습니다.
+                        < 한국벤처캐피탈협회 >('www.vps.go.kr'이하 '벤처투자종합포털')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.<br/><br/>
+                        ○ 이 개인정보처리방침은 2022년 11월 1부터 적용됩니다.
                     </p>
+
+                    <div class="txt_content_box">
+
+                        <dl class="txt_item">
+                            <dt>제1조(개인정보의 처리 목적)</dt>
+                            <dd>
+                                <p>< 한국벤처캐피탈협회 >('www.vps.go.kr'이하 '벤처투자종합포털')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</p>
+                                <dl>
+                                    <dt>1. 홈페이지 회원가입 및 관리</dt>
+                                    <dd>본 약관은 벤처투자포털 (이하 당 사이트)이 제공하는 모든 서비스(이하 서비스)의 이용조건 및 절차, 이용자와 당 사이트의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.</dd>
+                                </dl>
+                                <dl>
+                                    <dt>2. 민원사무 처리</dt>
+                                    <dd>① < 한국벤처캐피탈협회 >은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.</dd>
+                                    <dd>
+                                        ② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.<br/>
+                                        1<br/>
+                                        와 관련한 개인정보는 수집.이용에 관한 동의일로부터까지 위 이용목적을 위하여 보유.이용됩니다.<br/>
+                                        보유근거 : 벤처투자촉진에 관한 법률 제7조<br/>
+                                        관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년<br/>
+                                        예외사유 : 개인정보보호법 및 관련법령에 따른 예외사유<br/>
+                                        2<br/>
+                                        와 관련한 개인정보는 수집.이용에 관한 동의일로부터까지 위 이용목적을 위하여 보유.이용됩니다.	<br/>		
+                                        보유근거 : 벤처투자촉진에 관한 법률 제7조			<br/>
+                                        관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년			<br/>
+                                        예외사유 : 개인정보보호법 및 관련법령에 따른 예외사유			<br/>
+                                        3			
+                                        와 관련한 개인정보는 수집.이용에 관한 동의일로부터까지 위 이용목적을 위하여 보유.이용됩니다.	<br/>		
+                                        보유근거 : 벤처투자촉진에 관한 법률 제7조			<br/>
+                                        관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년			<br/>
+                                        예외사유 : 개인정보보호법 및 관련법령에 따른 예외사유			<br/>
+                                        4			
+                                        와 관련한 개인정보는 수집.이용에 관한 동의일로부터까지 위 이용목적을 위하여 보유.이용됩니다.	<br/>		
+                                        보유근거 : 벤처투자촉진에 관한 법률 제7조			<br/>
+                                        관련법령 : 표시/광고에 관한 기록 : 6개월			<br/>
+                                        예외사유 : 개인정보보호법 및 관련법령에 따른 예외사유<br/>
+                                    </dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                            </dd>
+                            <dd>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+
+                        <dl class="txt_item">
+                            <dt></dt>
+                            <dd>
+                                <p></p>
+                                <dl>
+                                    <dt></dt>
+                                    <dd></dd>
+                                </dl>
+                            </dd>
+                        </dl>
+    
+                    </div>
 
                 </div>
 
