--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -135,9 +135,15 @@
                 </ul>
             </nav>
             <div class="util_box">
+                <ul class="btn_login_box">
+                    <li><a href="./USR-2020-F-FORM.html">로그인</a></li>
+                    <li><a href="./USR-2010-F-FORM.html">회원가입</a></li>
+                </ul>
                 <div class="search_box">
-                    <input type="text" id="search_inp">
-                    <label for="search_inp" class="hidden">검색어 입력</label>
+                    <div class="search_inp">
+                        <input type="text" id="search_inp">
+                        <label for="search_inp" class="hidden">검색어 입력</label>
+                    </div>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -151,17 +157,6 @@
                     <span></span>
                 </a>
             </div>
-        </div>
-        <div class="header_bottom">
-            <div class="btn_bottom">
-                <a href="" class="purple">한국벤처캐피탈협회</a>
-                <a href="" class="blue">벤처투자 업무지원</a>
-            </div>
-            <ul>
-                <li><a href="./USR-2020-F-FORM.html">로그인</a></li>
-                <li><a href="./USR-2010-F-FORM.html">회원가입</a></li>
-                <li><a href="./USR-2210-F-LIST.html">사이트맵</a></li>
-            </ul>
         </div>
         <div class="allmenu_box">
             <div class="allmenu_box_header">
