--- a/portal/html/main_03.html
+++ b/portal/html/main_03.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/fullpage.css"> <!-- main -->
     <link rel="stylesheet" href="../css/swiper-bundle.css"> <!-- main -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main.css"> <!-- main -->
+    <link rel="stylesheet" href="../css/main2.css"> <!-- main -->
 
     <!-- pub js -->
     <script src="../js/jquery-3.6.0.min.js"></script>
@@ -288,7 +288,7 @@
         <div class="section sec1 active">
 
             <!-- 스와이퍼 -->
-            <div class="swiper-container main_02">
+            <div class="swiper-container">
                 <div class="swiper-wrapper">
 
                     <!-- Slide 1 -->
