--- a/pub_list.html
+++ b/pub_list.html
@@ -169,6 +169,15 @@
                     con:'완료',
                     etc:''
                 },
+                {
+                    division: '',
+                    depth1:'20221011 변경메인',
+                    path:'./portal/html/main_03.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
 
                 // 벤처투자매칭
                 {
@@ -1074,7 +1083,7 @@
                     date:'2022-09-26',
                     mdate:'2022-12-01',
                     con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span><span class="blue">디자인요청</span> [2차디자인]'
                 },
                 {
                     division: '',
